# predictX

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
contracts/: Cargo.toml
contracts/src/: betting.rs  errors.rs  events.rs  lib.rs  market.rs  resolution.rs  rewards.rs  storage.rs  tests.rs
docs/: architecture.md  deployment.md  roadmap.md  security.md
frontend/: next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/markets/[id]/: page.tsx
frontend/src/components/: create-market-form.tsx  header.tsx  market-card.tsx  market-details.tsx  markets-grid.tsx  place-bet-form.tsx  wallet-panel.tsx
frontend/src/lib/: env.ts
frontend/src/lib/contract/: betting-service.ts  create-market-service.ts  market-service.ts  soroban-client.ts  types.ts
frontend/src/lib/hooks/: use-market.ts  use-markets.ts
frontend/src/lib/wallet/: freighter.ts  stellar-wallet-kit.ts  use-wallet.ts  wallet-context.tsx
scripts/: deploy-contract.ps1  deploy-contract.sh  generate-bindings.sh
tests/: README.md
