[workspace]
members = ["contracts"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/predictx"

[workspace.dependencies]
soroban-sdk = "26.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1
panic = "abort"
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

